# yt-dlp-GUI

./: package-lock.json  yt_dlp_gui.py
gui/: dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
gui/backend/: downloader.py  main.py  queue_manager.py  requirements.txt  version_info.txt
gui/src/: AppShared.jsx  Variation1.jsx  yt-dlp-GUI-Variacoes.html
gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri_main_rs.rs
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src/hooks/: useDownloadQueue.ts
gui/src/lib/: api.ts
gui/src/styles/: app.css  base.css
scripts/: nsis_script.nsi
