# src-tauri/Cargo.toml
[package]
name = "yt-dlp-gui"
version = "2.1.0"
description = "GUI for yt-dlp"
authors = ["you"]
edition = "2021"

[lib]
name = "yt_dlp_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
